<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/imageView1"
    tools:context=".ColourChangeActivity_194089T">


  <TextView android:text = "@string/_194089t_assignment_01"
      android:layout_width="match_parent"
      android:layout_height = "wrap_content"
      android:textSize = "35sp"
      />


  <TextView
      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:text = "@string/red_value"
      android:textColorHighlight = "#000"
      android:textColorHint = "#000"
      android:layout_marginTop = "46dp"
      android:layout_marginStart="50dp"
      />

  <EditText
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:id="@+id/colour_red"
      android:focusable = "true"
      android:text="@string/_0"
      android:background="#fff"
      android:gravity="center"
      android:textColorHint = "#000"
      android:textSize="40sp"
      android:layout_marginStart="50dp"
      android:digits="0123456789"

      />

  <TextView
      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:text = "@string/blue_value"
      android:textColorHighlight = "#000"
      android:textColorHint = "#000"
      android:layout_marginTop = "46dp"
      android:layout_marginStart="50dp"
      />

  <EditText
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:id="@+id/colour_blue"
      android:focusable = "true"
      android:text="@string/_0"
      android:background="#fff"
      android:gravity="center"
      android:textColorHint = "#000"
      android:textSize="40sp"
      android:layout_marginStart="50dp"
      android:digits="0123456789"
      />

  <TextView
      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:text = "@string/green_value"
      android:textColorHighlight = "#000"
      android:textColorHint = "#000"
      android:layout_marginTop = "46dp"
      android:layout_marginStart="50dp"
      />

  <EditText
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:id="@+id/colour_green"
      android:focusable = "true"
      android:text="@string/_0"
      android:background="#fff"
      android:gravity="center"
      android:textColorHint = "#000"
      android:textSize="40sp"
      android:layout_marginStart="50dp"
      android:digits="0123456789"
      />

  <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/generate"
        android:layout_margin="100dp"/>


</LinearLayout>